# zentiff

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yml  fuzz.yml
fuzz/: .gitignore  Cargo.toml  tiff.dict
fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_decode_limits.rs  fuzz_probe.rs
fuzz/regression/fuzz_decode/: crash-e82b2cc525ec6ce0e8a6cd6bd9d49883a2f30767  oom-c89364aadfe9247017cdfc2b86755f358a51874a
fuzz/regression/fuzz_decode_limits/: crash-9ef148388e496a8e802136f3ef7a7e1177102cbe
src/: codec.rs  decode.rs  encode.rs  error.rs  lib.rs  zenode_defs.rs
tests/: corpus_decode.rs  metadata.rs  roundtrip.rs  zencodec_integration.rs
